kodex-rs/tui/src/chatwidget/snapshots/kodex_tui__chatwidget__tests__declined_tool_suggestion.snap
---
source: tui/src/chatwidget/tests/app_server.rs
assertion_line: 572
expression: popup
---
› Ask Kodex to do anything

  GPT-5.6-Sol default · /tmp/project
